--- a/talk-core/build.gradle
+++ b/talk-core/build.gradle
@@ -7,5 +7,5 @@ jar {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    api 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
