프로젝트 패키지 명 변경

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'tokTalk'
+rootProject.name = 'Moinda'
 // add Multi Module Target Directory
-include 'talk-core'
-include 'talk-api'
+include 'moinda-core'
+include 'moinda-api'
