--- a/build.gradle
+++ b/build.gradle
@@ -52,9 +52,9 @@ subprojects {
 }
 
 // Core -> Api
-project("talk-api") {
+project("moinda-api") {
     dependencies {
-        implementation project(':talk-core')
+        implementation project(':moinda-core')
     }
 }
 
