--- a/moinda-core/src/main/resources/application-core.properties
+++ b/moinda-core/src/main/resources/application-core.properties
@@ -1,10 +1,11 @@
-spring.datasource.hikari.jdbc-url=jdbc:h2:mem://localhost/~/testdb;
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url= jdbc:mysql://localhost:3306/moinda
+spring.datasource.username=moinda
+spring.datasource.password=moinda
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
