--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 
 services:
-  moinda-local-db:
-    container_name: moinda-local-db
+  moinda-db:
+    container_name: moinda-db
     image: mysql:8.0
     environment:
       MYSQL_DATABASE: moinda
@@ -12,7 +12,20 @@ services:
       MYSQL_PASSWORD: moinda
     restart: always
     ports:
-      - 3306:3306
+      - "3306:3306"
+    networks:
+      - moinda-local
+
+  moinda-app:
+    container_name: moinda-app
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "9090:9090"
+    restart: always
+    depends_on:
+      - moinda-db
     networks:
       - moinda-local
 
