--- a/moinda-core/src/main/resources/application-core.properties
+++ b/moinda-core/src/main/resources/application-core.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url= jdbc:mysql://localhost:3306/moinda
+spring.datasource.url=jdbc:mysql://moinda-db:3306/moinda
 spring.datasource.username=moinda
 spring.datasource.password=moinda
 
