--- a/moinda-core/src/main/resources/application-dev.properties
+++ b/moinda-core/src/main/resources/application-dev.properties
@@ -1,12 +1,12 @@
-server.port=9091
+server.port=9090
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://moinda-db:3306/moinda
+spring.datasource.url=jdbc:mysql://localhost:3306/moinda
 spring.datasource.username=moinda
 spring.datasource.password=moinda
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
