CI 브랜치 전략 변경 테스트

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -4,7 +4,7 @@ name: Moinda-Github Action CI
 on:
   pull_request:
     branches:
-      - 'hotfix/**'
+      - develope
 
 jobs:
   build-pipeline:
