--- a/moinda-core/src/main/resources/application-dev.properties
+++ b/moinda-core/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 server.port=9090
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/moinda
+spring.datasource.url=jdbc:mysql://localhost:3306/moinda?useSSL=false&serverTimezone=Asia/Seoul
 spring.datasource.username=moinda
 spring.datasource.password=moinda
 
