--- a/moinda-api/build.gradle
+++ b/moinda-api/build.gradle
@@ -1,6 +1,30 @@
 plugins {
     id 'jacoco'
+    // Restdocs
+    id 'org.asciidoctor.jvm.convert' version '3.3.2'
 }
+
+configurations {
+    asciidoctorExt
+}
+
+ext {
+    set('snippetsDir', file("build/generated-snippets"))
+}
+// dependsOn test => test 수행 후 해당 Task 진행
+tasks.named('asciidoctor') {
+    inputs.dir snippetsDir
+    configurations 'asciidoctorEx'
+    dependsOn test // test 수행 후 해당 Task 진행
+}
+
+bootJar { // SpringBoot 1.5 이하일 경우 jar
+    dependsOn asciidoctor
+    from ("${asciidoctor.outputDir}/html5") {
+        into 'static/docs' // 해당 경로로 복사
+    }
+}
+
 // exec 'task-test' => moinda-api\build\reports\jacoco\test\html
 jacoco {
     toolVersion = '0.8.5'
@@ -15,6 +39,9 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    // RestDocs
+    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
@@ -23,6 +50,8 @@ dependencies {
 test {
     description 'Runs the unit tests with coverage'
     finalizedBy 'jacocoTestReport'
+    // RestDocs
+    outputs.dir snippetsDir
 }
 
 jacocoTestReport {
