--- a/moinda-core/src/main/resources/application-dev.properties
+++ b/moinda-core/src/main/resources/application-dev.properties
@@ -10,3 +10,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=c:\\moinda\\files
+# 파일 개당 최대 크기
+spring.servlet.multipart.max-file-size=10MB
+# 한번에 업로드 할 수 있는 최대 크기
+spring.servlet.multipart.max-request-size=30MB
