테스트 전 사전작업

--- a/moinda-core/build.gradle
+++ b/moinda-core/build.gradle
@@ -18,7 +18,7 @@ jar {
 
 dependencies {
     api 'org.springframework.boot:spring-boot-starter-data-jpa'
-//    runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'com.h2database:h2'
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     implementation 'mysql:mysql-connector-java:8.0.28'
 
